--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,40 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+	background-color: rgb(240, 240, 240);
+}
+
+.App {
+	color: rgb(17, 17, 17);
+	max-width: 740px;
+	background-color: rgb(255, 255, 255);
+	box-shadow: rgba(118, 143, 255, 0.1) 0px 16px 24px 0px;
+	padding: 40px;
+	margin: 65px auto 45px;
+	border-radius: 4.5px;
+}
+
+.format-toolbar {
+  display: flex;
+  border-bottom: solid 1.7px rgba(199, 198, 255, 0.15);
+  padding: 10px 0;
+  margin: 0 0 10px 0;
+}
+
+.tooltip-icon-button {
+  border: 0;
+  margin: 0 5px;
 }
